--- a/project.html
+++ b/project.html
@@ -1,61 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samarth Portfolio</title>
     <!-- Bootstrap Css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./images/Logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/Logo.png" type="image/x-icon" />
 
     <!-- Font Awesome Cdn -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- Jquery min js -->
     <script src="./asserts/OWL CAROUSEL NEEDED STUFF/jquery.min.js"></script>
 
     <!-- Animation -->
-    <link rel="stylesheet" href="./asserts/Animation/animate.css">
+    <link rel="stylesheet" href="./asserts/Animation/animate.css" />
     <script src="./asserts/Animation/wow.min.js"></script>
 
     <!-- Custom Css -->
-    <link rel="stylesheet" href="./css/loading.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/sidebar.css">
-
-</head>
-<body>
-
-        <!-- Loader Addition -->
-        <div class="load__wrapper">
-            <div class="wrap">
-              <div class="overlay"></div>
-
-              <div class="cogWheel one">
-                <div class="cog one"></div>
-                <div class="cog two"></div>
-                <div class="cog three"></div>
-                <div class="cog four"></div>
-                <div class="cog five"></div>
-                <div class="center"></div>
-              </div>
-
-              <div class="cogWheel two">
-                <div class="cog one"></div>
-                <div class="cog two"></div>
-                <div class="cog three"></div>
-                <div class="cog four"></div>
-                <div class="cog five"></div>
-                <div class="center"></div>
-              </div>
-            </div>
-          </div>
-
-
+    <link rel="stylesheet" href="./css/loading.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/sidebar.css" />
+  </head>
+  <body>
+    <!-- Loader Addition -->
+    <div class="loading-screen load__wrapper">
+      <div class="loading-animation">
+        <img src="https://imgur.com/FsvEuM2.png" alt="logo" class="logo" />
+        <div class="loading-bar"></div>
+      </div>
+    </div>
 
     <!-- Menu Bar Creation -->
     <div id="menu" class="menu">
@@ -70,7 +59,7 @@
       <ul class="optionsBar">
         <li class="menuItem">
           <a href="./index.html" class="menuOption">
-            <img src="./images/Logo.png" class="img-fluid" alt="Logo">
+            <img src="./images/Logo.png" class="img-fluid" alt="Logo" />
             <h5 class="menuText">Home</h5>
           </a>
         </li>
@@ -99,7 +88,7 @@
         </li>
         <li class="menuItem">
           <a href="./gallery.html" id="constantManagerBtn" class="menuOption">
-          <i class="fas fa-images"></i>
+            <i class="fas fa-images"></i>
             <h5 class="menuText">Gallery</h5>
           </a>
         </li>
@@ -124,7 +113,6 @@
         </li>
       </ul>
 
-
       <div class="themeBar">
         <div>
           <button class="btn-toggle button" type="button" id="dark-mode-toggle">
@@ -135,149 +123,206 @@
       </div>
     </div>
 
-
-        <br><br><br><br>
-
+    <br /><br /><br /><br />
 
     <!-- Projects Section Design -->
     <section class="Projects__section">
-        <div class="container">
-            <h1>Projects</h1>
+      <div class="container">
+        <h1>Projects</h1>
 
-            <div class="row">
-                <div class="col col-sm-12 col-md-6 col-lg-6 mx-auto Project__First__column">
-                    <a href="https://apkcombo.com/engy-craft-factory/com.engycraftfactory.shopping/"><img src="./images/Projects/2.png" class="img-fluid" alt=""></a>
-                </div>
+        <div class="row">
+          <div
+            class="
+              col col-sm-12 col-md-6 col-lg-6
+              mx-auto
+              Project__First__column
+            "
+          >
+            <a
+              href="https://apkcombo.com/engy-craft-factory/com.engycraftfactory.shopping/"
+              ><img src="./images/Projects/2.png" class="img-fluid" alt=""
+            /></a>
+          </div>
 
-                <div class="col col-sm-12 col-md-6 col-lg-6 mx-auto Project__Second__column">
-                    <h2>ENGY CRAFT FACTORY</h2>
-                    <p>Engy Craft Factory mobile app for online shopping. This App is made for selling of hand made and craft products.</p>
-                    <div class="Icons__Box">
-                       <div class="icon__layer">
-                        <i class="fab fa-android"></i>
-                        <h6>CUSTOM APP DEVELOPMENT</h6>
-                       </div>
-                        <div class="icon__layer">
-                            <i class="fas fa-code"></i>
-                            <h6>STATIC SITE DEVELOPMENT</h6>
-                        </div>
-                    </div>
-                    <div class="Project__BTn">
-                    <a href="https://apkcombo.com/engy-craft-factory/com.engycraftfactory.shopping/">View Details</a>
-                    </div>
-                </div>
+          <div
+            class="
+              col col-sm-12 col-md-6 col-lg-6
+              mx-auto
+              Project__Second__column
+            "
+          >
+            <h2>ENGY CRAFT FACTORY</h2>
+            <p>
+              Engy Craft Factory mobile app for online shopping. This App is
+              made for selling of hand made and craft products.
+            </p>
+            <div class="Icons__Box">
+              <div class="icon__layer">
+                <i class="fab fa-android"></i>
+                <h6>CUSTOM APP DEVELOPMENT</h6>
+              </div>
+              <div class="icon__layer">
+                <i class="fas fa-code"></i>
+                <h6>STATIC SITE DEVELOPMENT</h6>
+              </div>
             </div>
-
-
-
-            <div class="row Advanced_row">
-
-                <div class="col col-sm-12 col-md-6 col-lg-6 mx-auto Project__Second__column">
-                    <h2>Zenith project</h2>
-                    <p>The Zenith project is based on the fundamentals of Al, machine learning and
-                        computer vision. As the lead developer of Project Zenith I took a dive into
-                        many of these fields that are considered challenging and complicated to see
-                        for myself the maximum potential that I can achieve with nothing more than
-                        a rudimentary knowledge of Python.
-                        </p>
-                    <div class="Icons__Box">
-                       <div class="icon__layer">
-                        <i class="fab fa-android"></i>
-                        <h6>CUSTOM APP DEVELOPMENT</h6>
-                       </div>
-                        <div class="icon__layer">
-                            <i class="fas fa-code"></i>
-                            <h6>STATIC SITE DEVELOPMENT</h6>
-                        </div>
-                    </div>
-                    <div class="Project__BTn">
-                    <!-- <a href="#">View Details</a> -->
-                    </div>
-                </div>
-
-
-                <div class="col col-sm-12 col-md-6 col-lg-6 mx-auto Project__First__column">
-                    <a href="#"><img src="./images/Projects/1.jpg" class="img-fluid" alt=""></a>
-                </div>
-
+            <div class="Project__BTn">
+              <a
+                href="https://apkcombo.com/engy-craft-factory/com.engycraftfactory.shopping/"
+                >View Details</a
+              >
             </div>
-
-
-            <div class="row">
-                <div class="col col-sm-12 col-md-6 col-lg-6 mx-auto Project__First__column">
-                    <a href="#"><img src="./images/Projects/3.JPG" class="img-fluid" alt=""></a>
-                </div>
-
-                <div class="col col-sm-12 col-md-6 col-lg-6 mx-auto Project__Second__column photography__section">
-                    <h2>Photography</h2>
-                    <p>Canon certified official photographer in Jodhpur</p>
-                    <div class="Project__BTn">
-                    <a href="#">View Details</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="row Advanced_row">
-
-                <div class="col col-sm-12 col-md-6 col-lg-6 mx-auto Project__Second__column">
-                    <h2>Intelli AR</h2>
-                    <p>In IntelliAR worked on augmented reality wherein learned to create various 3D objects to be used for real-life applications such as for the purpose of home design and entertainment.</p>
-                    <div class="Icons__Box">
-                       <div class="icon__layer">
-                        <i class="fab fa-android"></i>
-                        <h6>CUSTOM APP DEVELOPMENT</h6>
-                       </div>
-                        <div class="icon__layer">
-                            <i class="fas fa-code"></i>
-                            <h6>STATIC SITE DEVELOPMENT</h6>
-                        </div>
-                    </div>
-                    <div class="Project__BTn">
-                    <a href="#">View Details</a>
-                    </div>
-                </div>
-
-
-                <div class="col col-sm-12 col-md-6 col-lg-6 mx-auto Project__First__column">
-                    <a href="#"><img src="./images/Projects/4.jpg" class="img-fluid" alt=""></a>
-                </div>
-
-            </div>
-
-
-
-
+          </div>
         </div>
+
+        <div class="row Advanced_row">
+          <div
+            class="
+              col col-sm-12 col-md-6 col-lg-6
+              mx-auto
+              Project__Second__column
+            "
+          >
+            <h2>Zenith project</h2>
+            <p>
+              The Zenith project is based on the fundamentals of Al, machine
+              learning and computer vision. As the lead developer of Project
+              Zenith I took a dive into many of these fields that are considered
+              challenging and complicated to see for myself the maximum
+              potential that I can achieve with nothing more than a rudimentary
+              knowledge of Python.
+            </p>
+            <div class="Icons__Box">
+              <div class="icon__layer">
+                <i class="fab fa-android"></i>
+                <h6>CUSTOM APP DEVELOPMENT</h6>
+              </div>
+              <div class="icon__layer">
+                <i class="fas fa-code"></i>
+                <h6>STATIC SITE DEVELOPMENT</h6>
+              </div>
+            </div>
+            <div class="Project__BTn">
+              <!-- <a href="#">View Details</a> -->
+            </div>
+          </div>
+
+          <div
+            class="
+              col col-sm-12 col-md-6 col-lg-6
+              mx-auto
+              Project__First__column
+            "
+          >
+            <a href="#"
+              ><img src="./images/Projects/1.jpg" class="img-fluid" alt=""
+            /></a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div
+            class="
+              col col-sm-12 col-md-6 col-lg-6
+              mx-auto
+              Project__First__column
+            "
+          >
+            <a href="#"
+              ><img src="./images/Projects/3.JPG" class="img-fluid" alt=""
+            /></a>
+          </div>
+
+          <div
+            class="
+              col col-sm-12 col-md-6 col-lg-6
+              mx-auto
+              Project__Second__column
+              photography__section
+            "
+          >
+            <h2>Photography</h2>
+            <p>Canon certified official photographer in Jodhpur</p>
+            <div class="Project__BTn">
+              <a href="#">View Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="row Advanced_row">
+          <div
+            class="
+              col col-sm-12 col-md-6 col-lg-6
+              mx-auto
+              Project__Second__column
+            "
+          >
+            <h2>Intelli AR</h2>
+            <p>
+              In IntelliAR worked on augmented reality wherein learned to create
+              various 3D objects to be used for real-life applications such as
+              for the purpose of home design and entertainment.
+            </p>
+            <div class="Icons__Box">
+              <div class="icon__layer">
+                <i class="fab fa-android"></i>
+                <h6>CUSTOM APP DEVELOPMENT</h6>
+              </div>
+              <div class="icon__layer">
+                <i class="fas fa-code"></i>
+                <h6>STATIC SITE DEVELOPMENT</h6>
+              </div>
+            </div>
+            <div class="Project__BTn">
+              <a href="#">View Details</a>
+            </div>
+          </div>
+
+          <div
+            class="
+              col col-sm-12 col-md-6 col-lg-6
+              mx-auto
+              Project__First__column
+            "
+          >
+            <a href="#"
+              ><img src="./images/Projects/4.jpg" class="img-fluid" alt=""
+            /></a>
+          </div>
+        </div>
+      </div>
     </section>
 
-
     <!-- Bootstrap Js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
 
-  <script src="./js/sidebar.js"></script>
+    <script src="./js/sidebar.js"></script>
     <!-- Custom Js -->
     <script>
-        const Mode = document.querySelector('.mode__icon');
-        const nav = document.querySelector('nav');
-        const navLink = document.querySelectorAll('.nav__link');
-        const body = document.querySelector('body');
+      const Mode = document.querySelector(".mode__icon");
+      const nav = document.querySelector("nav");
+      const navLink = document.querySelectorAll(".nav__link");
+      const body = document.querySelector("body");
 
-        let count = 0;
-        Mode.addEventListener('click',function(){
-            body.classList.toggle('DarkMode');
-            nav.classList.toggle('DarkMode');
-            navLink.forEach(element =>{
-                element.classList.toggle('DarkMode');
-            })
-            MenuList.classList.toggle("DarkMode");
-            count = count+1;
-            if(count % 2 === 0){
-                Mode.setAttribute("src","./images/icons/light.svg");
-            }else{
-                Mode.setAttribute("src","./images/icons/dark.svg");
-            }
+      let count = 0;
+      Mode.addEventListener("click", function () {
+        body.classList.toggle("DarkMode");
+        nav.classList.toggle("DarkMode");
+        navLink.forEach((element) => {
+          element.classList.toggle("DarkMode");
         });
+        MenuList.classList.toggle("DarkMode");
+        count = count + 1;
+        if (count % 2 === 0) {
+          Mode.setAttribute("src", "./images/icons/light.svg");
+        } else {
+          Mode.setAttribute("src", "./images/icons/dark.svg");
+        }
+      });
     </script>
 
     <script src="./js/Nav.js"></script>
@@ -286,10 +331,10 @@
     <!-- Jquery Script -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script>
-        $(window).on('load',function(){
-            $('.load__wrapper').fadeOut('slow');
-        });
+      $(window).on("load", function () {
+        $(".load__wrapper").fadeOut("slow");
+      });
     </script>
     <script src="js/mode.js"></script>
-</body>
+  </body>
 </html>
